@@ -109,7 +109,7 @@ class Ui_forecast1hWindow(object):
 "}")
         self.weather_lb.setText("")
         icon = QtGui.QIcon()
-        icon.addPixmap(QtGui.QPixmap(gui_path + "/graphic_materials/pictogrammes/averses_orageuses.svg"),
+        icon.addPixmap(QtGui.QPixmap(gui_path + "graphic_materials/pictogrammes/averses_orageuses.svg"),
                        QtGui.QIcon.Normal, QtGui.QIcon.Off)
         self.weather_lb.setIcon(icon)
         self.weather_lb.setIconSize(QtCore.QSize(80, 80))
@@ -139,7 +139,7 @@ class Ui_forecast1hWindow(object):
 "}")
         self.ok_button.setText("")
         icon1 = QtGui.QIcon()
-        icon1.addPixmap(QtGui.QPixmap(gui_path + "/icons/exit_icon.svg"), QtGui.QIcon.Normal, QtGui.QIcon.Off)
+        icon1.addPixmap(QtGui.QPixmap(gui_path + "icons/exit_icon.svg"), QtGui.QIcon.Normal, QtGui.QIcon.Off)
         self.ok_button.setIcon(icon1)
         self.ok_button.setIconSize(QtCore.QSize(50, 50))
         self.ok_button.setObjectName("ok_button")
